# mipt_3d

./: CMakeLists.txt
inc/: load_shaders.hpp  window.hpp
shaders/: fragment_shader.fragmentshader  vertex_shader.vertexshader
src/: load_shaders.cpp  main.cpp  old_main.cpp  window.cpp
